# NUCLEO_F429_SPI_LCD

./: CMakeLists.txt  README.md
HARDWARE/LCD/: font.h  lcd.c  lcd.h
HARDWARE/SPI/: spi.c  spi.h
HARDWARE/TOUCH/: touch.c
SYSTEM/sys/: sys.c  sys.h
USER/: gui.c  gui.h  main.c  pic.h  stm32f429xx.h  stm32f4xx.h  stm32f4xx_hal_conf.h  stm32f4xx_it.c  system_stm32f4xx.c  test.c  test.h
cmake/: arm-none-eabi-gcc.cmake
